--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <label class="message-label" for="message-input">Enter Message: </label>
       <textarea
         placeholder="Enter message here"
-        value=""
+        value="dear friend \n please help \n assist me \n dollers \n free money \n stock alert"
         type="text"
         name="message"
         id="message-input"
